force-app/main/default/objects/MasterData__c/fields/DescriptionOfChargeAsPerFedfinaKFS__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOfChargeAsPerFedfinaKFS__c</fullName>
    <label>Description Of Charge as per Fedfina KFS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>