force-app/main/default/objects/MasterData__c/fields/Engagement_clause__c.field-meta.xml
<CustomField>
    <fullName>Engagement_clause__c</fullName>
    <label>Engagement clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>