force-app/main/default/objects/MasterData__c/fields/FinnoneChargeDescriptionKFS__c.field-meta.xml
<CustomField>
    <fullName>FinnoneChargeDescriptionKFS__c</fullName>
    <label>Finnone Charge Description KFS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>