force-app/main/default/objects/MasterData__c/fields/Grievance_clause__c.field-meta.xml
<CustomField>
    <fullName>Grievance_clause__c</fullName>
    <label>Grievance clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>