force-app/main/default/objects/MasterData__c/fields/KFS_customer_Email__c.field-meta.xml
<CustomField>
    <fullName>KFS_customer_Email__c</fullName>
    <label>KFS customer Email</label>
    <type>Email</type>
</CustomField>