force-app/main/default/objects/MasterData__c/fields/RemarksRateAmountWillComeMasterKFS__c.field-meta.xml
<CustomField>
    <fullName>RemarksRateAmountWillComeMasterKFS__c</fullName>
    <label>Remarks (Amount will come Master)KFS</label>
    <type>TextArea</type>
</CustomField>