force-app/main/default/objects/MasterData__c/fields/SalesforceCode__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCode__c</fullName>
    <label>Salesforce Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>