force-app/main/default/objects/MasterData__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marital Status</fullName>
            </value>
            <value>
                <fullName>Religion</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Applicant Type</fullName>
            </value>
            <value>
                <fullName>Ownership Type</fullName>
            </value>
            <value>
                <fullName>Professional Qualification</fullName>
            </value>
            <value>
                <fullName>Education Qualification</fullName>
            </value>
            <value>
                <fullName>Nationality</fullName>
            </value>
            <value>
                <fullName>Customer Profile Selection</fullName>
            </value>
            <value>
                <fullName>Sanction Condition</fullName>
            </value>
            <value>
                <fullName>Charge Master</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>General Insurance</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Constitution</fullName>
            </value>
            <value>
                <fullName>Payment Mode</fullName>
            </value>
            <value>
                <fullName>Instrument Type</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Customer Profile</fullName>
            </value>
            <value>
                <fullName>Disburse To</fullName>
            </value>
            <value>
                <fullName>Address Type</fullName>
            </value>
            <value>
                <fullName>Income Type</fullName>
            </value>
            <value>
                <fullName>CashBank Account</fullName>
            </value>
            <value>
                <fullName>Property Type</fullName>
            </value>
            <value>
                <fullName>Property Usage</fullName>
            </value>
            <value>
                <fullName>Fund Transfer Mode</fullName>
            </value>
            <value>
                <fullName>Selected Eligibility Program</fullName>
            </value>
            <value>
                <fullName>Neighbour Reference Check</fullName>
            </value>
            <value>
                <fullName>Negative Report reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>