force-app/main/default/objects/MasterData__c/fields/Type_Of_Product__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Product__c</fullName>
    <label>Type Of Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>