force-app/main/default/objects/MasterData__c/fields/ValuesOfChargeKFS__c.field-meta.xml
<CustomField>
    <fullName>ValuesOfChargeKFS__c</fullName>
    <label>Values Of Charge KFS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>